# ESP-32-LORATION

./: readme.md
3_GPIOs/: CMakeLists.txt  sdkconfig
3_GPIOs/main/: CMakeLists.txt  idf.c  idf.h  main.c  main.h
3_GPIOs/tests/: CMakeLists.txt  readme.md  run_tests.sh  test.cpp
4_ADC_PWM/main/: CMakeLists.txt  adc.c  main.c  pwm.c  pwm.h
5_Pulse_Count/main/: CMakeLists.txt  adc.c  adc.h  pcnt_event_example_main.c  pwm.c  pwm.h
6.5_WiFi/: CMakeLists.txt  sdkconfig  sdkconfig.old  test.py
6.5_WiFi/html/: form.html
6.5_WiFi/main/: CMakeLists.txt  main.c
6.5_WiFi/templates/: index.html
6_WiFi/: partitions.csv  sdkconfig  sdkconfig.old
6_WiFi/html/: index.html
6_WiFi/main/: AccessPoint.c  AccessPoint.h  CMakeLists.txt  GPIO.c  Server.c  Server.h  html.c  html.h  main.c
7_BLE/ble_adv_scan_combined/: sdkconfig
7_BLE/ble_adv_scan_combined/main/: CMakeLists.txt  app_bt.c  app_bt.h  gpio.c  gpio.h  main.c
W_ETH+MODBUS/: sdkconfig
W_ETH+MODBUS/main/: ethernet_example_main.c
X_Flash/: partitions_example.csv  sdkconfig  sdkconfig.ici
X_Flash/main/: main.c
Y_RTOS/: CMakeLists.txt
Y_RTOS/main/: main.c
